fix : home page header - style -  adjust header text sizing and line breaks for improved readability

--- a/src/app/components/homePage/HomeHeader/style.module.scss
+++ b/src/app/components/homePage/HomeHeader/style.module.scss
@@ -10,7 +10,7 @@
 
   .title {
     font-weight: 600;
-    font-size: 4rem;
+    font-size: 3.5rem;
     max-width: 600px;
     margin-bottom: 1rem;
     line-height: 1.2;
@@ -18,9 +18,9 @@
 
   .description {
     max-width: 800px;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: 400;
-    line-height: 1.4;
+    line-height: 1.2;
   }
 
   @media #{$laptop} {
